--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     },
     "scripts": {
         "start": "node build/server.js",
+        "deploy": "npm run build && gcloud app deploy",
         "build": "tsc"
     },
     "dependencies": {
