--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     },
     "private": true,
     "engines": {
-        "node": "10.11.0",
-        "npm": "6.4.1"
+        "node": "8.x.x",
+        "npm": "5.x.x"
     },
     "scripts": {
         "start": "node build/server.js",
