--- a/package.json
+++ b/package.json
@@ -5,21 +5,11 @@
         "name": "Adrian Hintze"
     },
     "private": true,
-    "engines": {
-        "node": "10.x.x",
-        "npm": "6.x.x"
-    },
     "scripts": {
         "start": "node build/server.js",
-        "deploy": "npm install && npm run build && gcloud app deploy",
-        "build": "tsc"
+        "deploy": "gcloud app deploy"
     },
     "dependencies": {
-        "express": "4.16.3"
-    },
-    "devDependencies": {
-        "@types/express": "4.16.0",
-        "@types/node": "10.11.0",
-        "typescript": "3.0.3"
+        "express": "4.17.1"
     }
 }
